// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an event bridge and lambda target with event bus name 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"aws_lambda_alias\\": [
          \\"function_version\\"
        ]
      }
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-event-bridge-lambda_code-bucket_3703E73B\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-event-bridge-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_code-bucket_3703E73B\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-event-bridge-lambda_code-bucket-public-access-block_A1A4EF9D\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-event-bridge-lambda_code-bucket_3703E73B.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_code-bucket-public-access-block_A1A4EF9D\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-event-bridge-lambda_execution-role_7936A26A\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-event-bridge-lambda_assume-policy-document_59E97C0B.json}\\",
        \\"name\\": \\"test-event-bridge-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-role_7936A26A\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-event-bridge-lambda_execution-policy_F6422B9B\\": {
        \\"name\\": \\"test-event-bridge-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-event-bridge-lambda_execution-policy-document_0A3C0E28.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-policy_F6422B9B\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-event-bridge-lambda_execution-role-policy-attachment_2614BB3C\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-event-bridge-lambda_execution-policy_F6422B9B.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-event-bridge-lambda_execution-role_7936A26A.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-event-bridge-lambda_execution-role_7936A26A\\",
          \\"aws_iam_policy.test-event-bridge-lambda_execution-policy_F6422B9B\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-role-policy-attachment_2614BB3C\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-event-bridge-lambda_65C2E1CE\\": {
        \\"filename\\": \\"\${data.archive_file.test-event-bridge-lambda_lambda-default-file_57164BB7.output_path}\\",
        \\"function_name\\": \\"test-event-bridge-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-event-bridge-lambda_execution-role_7936A26A.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-event-bridge-lambda_lambda-default-file_57164BB7.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_65C2E1CE\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-event-bridge-lambda_log-group_CF4CF8D4\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-event-bridge-lambda_65C2E1CE.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-event-bridge-lambda_65C2E1CE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_log-group_CF4CF8D4\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-event-bridge-lambda_alias_2EC274FC\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-event-bridge-lambda_65C2E1CE.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-event-bridge-lambda_65C2E1CE.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-event-bridge-lambda_65C2E1CE\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_alias_2EC274FC\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_event_rule\\": {
      \\"test-event-bridge-lambda_event-bridge-rule_529FF7C2\\": {
        \\"event_bus_name\\": \\"test-bus\\",
        \\"event_pattern\\": \\"{\\\\\\"source\\\\\\":[\\\\\\"aws.states\\\\\\"],\\\\\\"detail-type\\\\\\":[\\\\\\"Step Functions Execution Status Change\\\\\\"]}\\",
        \\"name\\": \\"test-event-bridge-lambda-Rule\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/event-bridge-rule/event-bridge-rule\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_event-bridge-rule_529FF7C2\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_event_target\\": {
      \\"test-event-bridge-lambda_event-bridge-rule_event-bridge-target_84D24AD3\\": {
        \\"arn\\": \\"\${aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC.arn}\\",
        \\"rule\\": \\"\${aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2.name}\\",
        \\"target_id\\": \\"lambda\\",
        \\"depends_on\\": [
          \\"aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC\\",
          \\"aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/event-bridge-rule/event-bridge-target\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_event-bridge-rule_event-bridge-target_84D24AD3\\"
          }
        }
      }
    },
    \\"aws_lambda_permission\\": {
      \\"test-event-bridge-lambda_lambda-permission_D900B300\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC.function_name}\\",
        \\"principal\\": \\"events.amazonaws.com\\",
        \\"qualifier\\": \\"\${aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC.name}\\",
        \\"source_arn\\": \\"\${aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2.arn}\\",
        \\"depends_on\\": [
          \\"aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC\\",
          \\"aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda-permission\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_lambda-permission_D900B300\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-event-bridge-lambda_assume-policy-document_59E97C0B\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\",
                  \\"edgelambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_assume-policy-document_59E97C0B\\"
          }
        }
      },
      \\"test-event-bridge-lambda_execution-policy-document_0A3C0E28\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-policy-document_0A3C0E28\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-event-bridge-lambda_lambda-default-file_57164BB7\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_lambda-default-file_57164BB7\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders an event bridge and lambda target with rule description 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\",
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"aws_lambda_alias\\": [
          \\"function_version\\"
        ]
      }
    }
  },
  \\"resource\\": {
    \\"aws_s3_bucket\\": {
      \\"test-event-bridge-lambda_code-bucket_3703E73B\\": {
        \\"acl\\": \\"private\\",
        \\"bucket\\": \\"pocket-test-event-bridge-lambda\\",
        \\"force_destroy\\": true,
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/code-bucket\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_code-bucket_3703E73B\\"
          }
        }
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"test-event-bridge-lambda_code-bucket-public-access-block_A1A4EF9D\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.test-event-bridge-lambda_code-bucket_3703E73B.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/code-bucket-public-access-block\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_code-bucket-public-access-block_A1A4EF9D\\"
          }
        }
      }
    },
    \\"aws_iam_role\\": {
      \\"test-event-bridge-lambda_execution-role_7936A26A\\": {
        \\"assume_role_policy\\": \\"\${data.aws_iam_policy_document.test-event-bridge-lambda_assume-policy-document_59E97C0B.json}\\",
        \\"name\\": \\"test-event-bridge-lambda-ExecutionRole\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-role\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-role_7936A26A\\"
          }
        }
      }
    },
    \\"aws_iam_policy\\": {
      \\"test-event-bridge-lambda_execution-policy_F6422B9B\\": {
        \\"name\\": \\"test-event-bridge-lambda-ExecutionRolePolicy\\",
        \\"policy\\": \\"\${data.aws_iam_policy_document.test-event-bridge-lambda_execution-policy-document_0A3C0E28.json}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-policy\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-policy_F6422B9B\\"
          }
        }
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"test-event-bridge-lambda_execution-role-policy-attachment_2614BB3C\\": {
        \\"policy_arn\\": \\"\${aws_iam_policy.test-event-bridge-lambda_execution-policy_F6422B9B.arn}\\",
        \\"role\\": \\"\${aws_iam_role.test-event-bridge-lambda_execution-role_7936A26A.name}\\",
        \\"depends_on\\": [
          \\"aws_iam_role.test-event-bridge-lambda_execution-role_7936A26A\\",
          \\"aws_iam_policy.test-event-bridge-lambda_execution-policy_F6422B9B\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-role-policy-attachment\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-role-policy-attachment_2614BB3C\\"
          }
        }
      }
    },
    \\"aws_lambda_function\\": {
      \\"test-event-bridge-lambda_65C2E1CE\\": {
        \\"filename\\": \\"\${data.archive_file.test-event-bridge-lambda_lambda-default-file_57164BB7.output_path}\\",
        \\"function_name\\": \\"test-event-bridge-lambda-Function\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.test-event-bridge-lambda_execution-role_7936A26A.arn}\\",
        \\"runtime\\": \\"python3.8\\",
        \\"source_code_hash\\": \\"\${data.archive_file.test-event-bridge-lambda_lambda-default-file_57164BB7.output_base64sha256}\\",
        \\"timeout\\": 5,
        \\"vpc_config\\": [],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"filename\\",
            \\"source_code_hash\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/lambda\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_65C2E1CE\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_log_group\\": {
      \\"test-event-bridge-lambda_log-group_CF4CF8D4\\": {
        \\"name\\": \\"/aws/lambda/\${aws_lambda_function.test-event-bridge-lambda_65C2E1CE.function_name}\\",
        \\"retention_in_days\\": 14,
        \\"depends_on\\": [
          \\"aws_lambda_function.test-event-bridge-lambda_65C2E1CE\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/log-group\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_log-group_CF4CF8D4\\"
          }
        }
      }
    },
    \\"aws_lambda_alias\\": {
      \\"test-event-bridge-lambda_alias_2EC274FC\\": {
        \\"function_name\\": \\"\${aws_lambda_function.test-event-bridge-lambda_65C2E1CE.function_name}\\",
        \\"function_version\\": \\"\${split(\\\\\\":\\\\\\", aws_lambda_function.test-event-bridge-lambda_65C2E1CE.qualified_arn)[7]}\\",
        \\"name\\": \\"DEPLOYED\\",
        \\"depends_on\\": [
          \\"aws_lambda_function.test-event-bridge-lambda_65C2E1CE\\"
        ],
        \\"lifecycle\\": {
          \\"ignore_changes\\": [
            \\"function_version\\"
          ]
        },
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/alias\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_alias_2EC274FC\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_event_rule\\": {
      \\"test-event-bridge-lambda_event-bridge-rule_529FF7C2\\": {
        \\"description\\": \\"Test description\\",
        \\"event_bus_name\\": \\"default\\",
        \\"event_pattern\\": \\"{\\\\\\"source\\\\\\":[\\\\\\"aws.states\\\\\\"],\\\\\\"detail-type\\\\\\":[\\\\\\"Step Functions Execution Status Change\\\\\\"]}\\",
        \\"name\\": \\"test-event-bridge-lambda-Rule\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/event-bridge-rule/event-bridge-rule\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_event-bridge-rule_529FF7C2\\"
          }
        }
      }
    },
    \\"aws_cloudwatch_event_target\\": {
      \\"test-event-bridge-lambda_event-bridge-rule_event-bridge-target_84D24AD3\\": {
        \\"arn\\": \\"\${aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC.arn}\\",
        \\"rule\\": \\"\${aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2.name}\\",
        \\"target_id\\": \\"lambda\\",
        \\"depends_on\\": [
          \\"aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC\\",
          \\"aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/event-bridge-rule/event-bridge-target\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_event-bridge-rule_event-bridge-target_84D24AD3\\"
          }
        }
      }
    },
    \\"aws_lambda_permission\\": {
      \\"test-event-bridge-lambda_lambda-permission_D900B300\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC.function_name}\\",
        \\"principal\\": \\"events.amazonaws.com\\",
        \\"qualifier\\": \\"\${aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC.name}\\",
        \\"source_arn\\": \\"\${aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2.arn}\\",
        \\"depends_on\\": [
          \\"aws_lambda_alias.test-event-bridge-lambda_alias_2EC274FC\\",
          \\"aws_cloudwatch_event_rule.test-event-bridge-lambda_event-bridge-rule_529FF7C2\\"
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda-permission\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_lambda-permission_D900B300\\"
          }
        }
      }
    }
  },
  \\"data\\": {
    \\"aws_iam_policy_document\\": {
      \\"test-event-bridge-lambda_assume-policy-document_59E97C0B\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"sts:AssumeRole\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"principals\\": [
              {
                \\"identifiers\\": [
                  \\"lambda.amazonaws.com\\",
                  \\"edgelambda.amazonaws.com\\"
                ],
                \\"type\\": \\"Service\\"
              }
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/assume-policy-document\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_assume-policy-document_59E97C0B\\"
          }
        }
      },
      \\"test-event-bridge-lambda_execution-policy-document_0A3C0E28\\": {
        \\"version\\": \\"2012-10-17\\",
        \\"statement\\": [
          {
            \\"actions\\": [
              \\"logs:CreateLogGroup\\",
              \\"logs:CreateLogStream\\",
              \\"logs:PutLogEvents\\",
              \\"logs:DescribeLogStreams\\"
            ],
            \\"effect\\": \\"Allow\\",
            \\"resources\\": [
              \\"arn:aws:logs:*:*:*\\"
            ]
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/execution-policy-document\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_execution-policy-document_0A3C0E28\\"
          }
        }
      }
    },
    \\"archive_file\\": {
      \\"test-event-bridge-lambda_lambda-default-file_57164BB7\\": {
        \\"output_path\\": \\"index.py.zip\\",
        \\"type\\": \\"zip\\",
        \\"source\\": [
          {
            \\"content\\": \\"handler(event, context):\\\\n\\\\t print(event)\\",
            \\"filename\\": \\"index.py\\"
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test-event-bridge-lambda/lambda/lambda-default-file\\",
            \\"uniqueId\\": \\"test-event-bridge-lambda_lambda-default-file_57164BB7\\"
          }
        }
      }
    }
  }
}"
`;
